--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,15 @@
 
 #CubiX files
 *.cub
+
+#OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+.directory
+
